# ai-invention-d49afe-quorum-sensing-committees-a-hierarchical

./: README.md
paper_latex/: references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_png.py  missing_entries.bib  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-1/dataset-1/src/: .sdk_openhands_agent_struct_out.json  README.md  data.py  data_out.json  data_out_mini.json  data_out_preview.json  dataset_processor.py  full_data_out.json  generate_preview_mini.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json
round-2/research-1/: README.md
round-2/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json  research_report.md
