[project]
name = "quorum-sensing-experiment"
version = "0.1.0"
description = "Quorum-Sensing Committees: Hierarchical LLM Consensus Prototype"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "datasets==5.0.0",
    "numpy==2.4.6",
    "requests==2.34.2",
    "pandas==3.0.3",
    "pydantic==2.13.4",
    "huggingface-hub==1.19.0",
    "tqdm==4.68.2",
]
